--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,2 +1,6 @@
 <h1>Guests#index</h1>
 <p>Find me in app/views/guests/index.html.erb</p>
+
+<% @guests.each do |g| %>
+<%= g.user.first_name %>
+<% end %>
