profile page completed

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<h1>Welcome to <%= @user.username %>'s Profile!</h1>
+<% if session[:user_id] == @user.id %>
+  <p><img src= '<%=@user.image_url%>'></p>
+  <h2>Name: <%= @user.first_name %> <%= @user.last_name %></h2>
+  <h3>Email: <%= @user.email %></h3>
+  <p><%= @user.bio %></p>
+  <p>Interests:<br> <%  @user_interests.each do |u| %>
+        <% if u.user = @user %>
+            <%= link_to u.interest.name, interest_path %><br>
+        <% end %>
+      <% end %>
+<% end %>
