--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,28 @@
 <%= form_for @user do |f| %>
+  <%= f.label :first_name %>
+  <%= f.text_field :first_name %><br>
+  <%= f.label :last_name %>
+  <%= f.text_field :last_name %><br>
+  <%= f.label :email %>
+  <%= f.text_field :email %><br>
+  <%= f.label "Profile Photo" %>
+  <%= f.text_field :image_url, placeholder: "Copy image url here" %><br>
+  <%= f.label :bio %>
+  <%= f.text_field :bio %><br>
+  <p>Login information</p>
   <%= f.label :username %>
-  <%= f.text_field :username %>
+  <%= f.text_field :username %><br>
   <%= f.label :password %>
-  <%= f.password_field :password %>
+  <%= f.password_field :password %><br>
   <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <%= f.password_field :password_confirmation %><br>
+
+  <ul>
+    <% @interests.each do |i| %>
+      <%= check_box_tag 'i_ids[]', i.id -%>
+           <%= h i.name -%>
+    <% end %>
+  </ul>
+
   <%= f.submit %>
-<% end %>
+  <% end %>
