--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,40 @@
  *= require_tree .
  *= require_self
  */
+
+
+ @import url('https://fonts.googleapis.com/css?family=Raleway');
+
+ body {
+ font-family: 'Raleway', sans-serif;
+ background-color: #000;
+
+ }
+
+ .btn.btn-primary {
+  background-color: #00b3e6;
+}
+
+.flatiron-bg {
+  background: url('flatiron-bg.jpg') no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
+   background-size: cover;
+}
+
+.new .form_container {
+  letter-spacing:1px;
+  h2, label {
+    text-shadow:2px 2px #000;
+  }
+  color:#fff;
+}
+
+.bg-dark {
+    background-color: #000 !important;
+}
+
+footer {
+  color:#fff;
+}
