--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,19 @@
-<%= form_for @user do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %>
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-  <%= f.submit %>
-<% end %>
+<div>
+  <div class="form_container col-md-4 offset-md-4">
+    <h2>Sign Up</h2>
+  <%= form_for @user do |f| %>
+    <div class="form-group">
+        <%= f.label :username %>
+      <%= f.text_field :username, {:class => 'form-control'} %></div>
+      <div class="form-group">
+      <%= f.label :password %>
+        <%= f.password_field :password, {:class => 'form-control'} %></div>
+    <div class="form-group">
+        <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation , {:class => 'form-control'} %>
+
+    </div>
+      <%= f.submit :class => 'btn btn-primary' %>
+    <% end %>
+    </div>
+  </div>
