--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,10 +1,14 @@
 <h1> <%= @interest.name %> </h1>
 
 <h2>Users who share this interest:<br></h2> <ul><%  @user_interests.each do |u| %>
-      <% if u.interest == @interest %>
-          <li><%= link_to u.user.username, user_path %>
-             <img src= '<%=u.user.image_url%>', height=50>
-          </li>
+      <% if u.interest == @interest && u.user != @user %>
+          <div><%= u.user.username%><br>
+             <img src= '<%=u.user.image_url%>', height=200><br>
+             <%= link_to 'View Profile', u.user, class: "btn btn-primary" %><br>
+             <%= link_to 'Invite to a Link-Up', new_link_up_path, class: "btn btn-primary" %>
+          </div>
       <% end %>
     <% end %>
       </ul>
+
+      <%= link_to 'Back to My Profile', @user %><br>
