added some more show pages

--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,14 +1,15 @@
-<h1> <%= @interest.name %> </h1>
+<h1> -<%= @interest.name %>- </h1><br>
 
-<h2>Users who share this interest:<br></h2> <ul><%  @user_interests.each do |u| %>
+<h4>Users who share this interest:</h4><br>
+<ul><%  @user_interests.each do |u| %>
       <% if u.interest == @interest && u.user != @user %>
-          <div><%= u.user.username%><br>
-             <img src= '<%=u.user.image_url%>', height=200><br>
-             <%= link_to 'View Profile', u.user, class: "btn btn-primary" %><br>
-             <%= link_to 'Invite to a Link-Up', new_link_up_path, class: "btn btn-primary" %>
-          </div>
+          <div><h4><%= u.user.username%></h4>
+          <img src= '<%=u.user.image_url%>', height=200><br></br>
+          <%= link_to 'View Profile', u.user, class: "btn btn-secondary" %>
+          <%= link_to 'Invite to a Link-Up', new_link_up_path, class: "btn btn-secondary" %>
+        </div><br>
       <% end %>
     <% end %>
-      </ul>
+  </ul><br>
 
-      <%= link_to 'Back to My Profile', @user %><br>
+      <h4><%= link_to 'Back to My Profile', @user, class: "btn btn-primary"%><br></h4>
