--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,28 +1,53 @@
+<div class="form_container col-md-4 offset-md-4">
+  <h2>Sign Up</h2>
 <%= form_for @user do |f| %>
-  <%= f.label :first_name %>
-  <%= f.text_field :first_name %><br>
-  <%= f.label :last_name %>
-  <%= f.text_field :last_name %><br>
-  <%= f.label :email %>
-  <%= f.text_field :email %><br>
-  <%= f.label "Profile Photo" %>
-  <%= f.text_field :image_url, placeholder: "Copy image url here" %><br>
-  <%= f.label :bio %>
-  <%= f.text_field :bio %><br>
-  <p>Login information</p>
+<div class="form-group"><%= f.label :first_name %>
+  <%= f.text_field :first_name, {:class => 'form-control'} %>
+</div>
+
+  <div class="form-group">
+     <%= f.label :last_name %>
+    <%= f.text_field :last_name, {:class => 'form-control'} %>
+    </div>
+
+  <div class="form-group">
+     <%= f.label :email %>
+    <%= f.text_field :email, {:class => 'form-control'} %>
+  </div>
+
+  <div class="form-group">  <%= f.label "Profile Photo" %>
+    <%= f.text_field :image_url, placeholder: "Copy image url here", :class => 'form-control' %>
+  </div>
+
+<div class="form-group">
+<%= f.label :bio %>
+  <%= f.text_field :bio, {:class => 'form-control'} %>
+  </div>
+  <br><br>
+    <h3>Login information</h3>
+
+<div class="form-group">
   <%= f.label :username %>
-  <%= f.text_field :username %><br>
-  <%= f.label :password %>
-  <%= f.password_field :password %><br>
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %><br>
+  <%= f.text_field :username, {:class => 'form-control'} %>
+</div>
 
-  <ul>
-    <% @interests.each do |i| %>
-      <%= check_box_tag 'i_ids[]', i.id -%>
-           <%= h i.name -%>
+<div class="form-group">
+<%= f.label :password %>
+  <%= f.password_field :password,  {:class => 'form-control'} %>
+</div>
+
+    <div class="form-group">
+    <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, {:class => 'form-control'} %>
+    </div>
+
+    <ul>
+      <% @interests.each do |i| %>
+        <%= check_box_tag 'i_ids[]', i.id -%>
+             <%= h i.name -%>
+      <% end %>
+    </ul>
+
+    <%= f.submit :class => 'btn btn-block btn-primary' %>
     <% end %>
-  </ul>
-
-  <%= f.submit %>
-  <% end %>
+  </div>
