--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<br>
+<h1> Welcome to LinkUp! </h1>
+
+<h4> <%=  link_to 'Login', sessions_path, class: "btn btn-primary"%> or <%=  link_to 'Signup', new_user_path, class: "btn btn-primary" %> to get started </h4>
