--- a/app/views/hosts/show.html.erb
+++ b/app/views/hosts/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Hosts#show</h1>
-<p>Find me in app/views/hosts/show.html.erb</p>
+<h1><%= @user.username %></h1>
+  <p><img src= '<%=@user.image_url%>'></p>
+  <h4>Name: <%= @user.first_name %> <%= @user.last_name %></h4>
+  <h4>Email: <%= @user.email %></h4>
+  <h4><%= @user.bio %></h4><br>
+  <h4>Interests:<br> <%  @user_interests.each do |u| %>
+        <% if u.user == @user %>
+            <%= link_to u.interest.name, interest_path %><br>
+        <% end %>
+      <% end %></h4>
+  <h4><%= link_to 'Invite to a Link-Up', new_guest_path, class: "btn btn-secondary" %></h4>
