--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
 <br>
 <h1> Welcome to LinkUp! </h1>
 
-<h4> <%=  link_to 'Login', sessions_path, class: "btn btn-primary"%> or <%=  link_to 'Signup', new_user_path, class: "btn btn-primary" %> to get started </h4>
+<h4> <%=  link_to 'Login', sessions_path, class: "btn btn-primary"%> or <%=  link_to 'Signup', signup_path, class: "btn btn-primary" %> to get started </h4>
