--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,33 +21,17 @@
 
 <div class="form-group">
 <%= f.label :bio %>
-  <%= f.text_field :bio, {:class => 'form-control'} %>
+  <%= f.text_area :bio, {:class => 'form-control'} %>
   </div>
-  <br><br>
-    <h3>Login information</h3>
 
 <div class="form-group">
-  <%= f.label :username %>
-  <%= f.text_field :username, {:class => 'form-control'} %>
-</div>
-
-<div class="form-group">
-<%= f.label :password %>
-  <%= f.password_field :password,  {:class => 'form-control'} %>
-</div>
-
-    <div class="form-group">
-    <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation, {:class => 'form-control'} %>
-    </div>
-
-    <ul>
-      <% @interests.each do |i| %>
-        <%= check_box_tag 'i_ids[]', i.id -%>
-             <%= h i.name -%>
-      <% end %>
-    </ul>
+<%= f.label :interests %><br>
+<% @interests.each do |i| %>
+  <%= check_box_tag 'i_ids[]', i.id -%>
+       <%= h i.name -%>
+  <% end %>
+  </div>
 
     <%= f.submit :class => 'btn btn-block btn-primary' %>
-    <% end %>
-  </div>
+
+<% end %>
