fixed showpage for user to not include invite button

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,12 @@
   <h4>Name: <%= @user.first_name %> <%= @user.last_name %></h4>
   <h4>Email: <%= @user.email %></h4>
   <h4><%= @user.bio %></h4><br>
-  <h4>Interests:<br> <%  @user_interests.each do |u| %>
+  <h4>Interests (click on one to see other users who share this interest):<br> <%  @user_interests.each do |u| %>
         <% if u.user == @user %>
             <%= link_to u.interest.name, interest_path %><br>
         <% end %>
       <% end %></h4>
+
+<% if @user.id != session[:user_id] %>
   <h4><%= link_to 'Invite to a Link-Up', :controller=>'guests', :action=> 'new', :id=> params[:id], class: "btn btn-secondary"%></h4>
+<% end %>
