corrected end tag in show for users

--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <h1> -<%= @interest.name %>- </h1>
 
 <h2>Users who share this interest:</h2>
@@ -15,23 +14,13 @@
             <img src= '<%=u.user.image_url%>', height=200><br></br>
             <%= link_to 'View Profile', u.user, class: "btn btn-secondary btn-block" %>
             <%= link_to 'Invite to a Link-Up', new_link_up_path, class: "btn btn-secondary btn-block" %>
+
+
           </div>
 
         <% end %>
-=======
-<h1> -<%= @interest.name %>- </h1><br>
-
-<h4>Users who share this interest:</h4><br>
-<ul><%  @user_interests.each do |u| %>
-      <% if u.interest == @interest && u.user.id != session[:user_id] %>
-          <div><h4><%= u.user.username%></h4>
-          <img src= '<%=u.user.image_url%>', height=200><br></br>
-          <%= link_to 'View Profile', u.user, class: "btn btn-secondary" %>
-        </div><br>
->>>>>>> f3471809e47505da5878fc58a68ce2b7376cd3c2
       <% end %>
 
-    </div>
-
-<br>
-      <h4><%= link_to 'Back to My Profile', @user, class: "btn btn-primary"%><br></h4>
+</div>
+<br><br>
+<h4><%= link_to 'Back to My Profile', @user, class: "btn btn-primary"%></h4>
