created an edit form

--- a/app/views/link_ups/show.html.erb
+++ b/app/views/link_ups/show.html.erb
@@ -11,3 +11,7 @@
             <h4>Guest: <%= link_to g.user.username, g.user %></h4>
       <% end %>
 <% end %>
+
+
+
+<h4><%= link_to 'Edit LinkUp', edit_link_up_path, class: "btn btn-secondary"%></h4>
