--- a/app/views/link_ups/edit.html.erb
+++ b/app/views/link_ups/edit.html.erb
@@ -1,2 +1,25 @@
-<h1>LinkUps#edit</h1>
-<p>Find me in app/views/link_ups/edit.html.erb</p>
+<div class="form_container">
+
+<h2>Edit your Link-Up</h2>
+
+<%= form_for @link_up do |f| %>
+<div>
+  <%= f.label :name %>
+  <%= f.text_field :name, placeholder: "Name this LinkUp!" %>
+</div>
+
+<div class="">
+  <%= f.label :location %>
+  <%= f.collection_select(:location_id, @locations, :id, :name) %>
+</div>
+
+<div><%= f.datetime_select :datetime, ampm: true %> </div>
+
+<div>
+  <%= f.label :description %>
+  <%= f.text_area :description, placeholder: "Provide some details" %>
+</div>
+
+<%= f.submit "Update LinkUp", class: "btn btn-large btn-primary" %>
+<% end %>
+</div>
