--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,37 +1,58 @@
-<h1><%= @user.username %></h1>
+<style>
+.content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 48%
+}
+</style>
+<body>
+
+<div class="content">
+
+<h1><span style="background-color: lightblue"><%= @user.username %></span></h1><br>
+</div>
+
+</body>
 
 <div class="row">
 
   <div class="col-lg-3">
 
-    <img src= '<%=@user.image_url%>'>
+    <img src= '<%=@user.image_url%>', width="250">
   </div>
   <div class="col-lg-9">
 
-    <h4>Name: <%= @user.first_name %> <%= @user.last_name %></h4>
-    <h4>Email: <%= @user.email %></h4>
-    <h4><%= @user.bio %></h4><br>
-    <h4>Interests (click on one to see other users who share this interest):<br> <%  @user_interests.each do |u| %>
+    <h4><strong><font-color: "teal"><span style="background-color: lightgrey">Name:</span> <%= @user.first_name %> <%= @user.last_name %></strong></font></h4>
+    <h4><strong><font-color: "teal"><span style="background-color: lightgrey">Email:</span> <%= @user.email %></strong></span></font></h4>
+    <h4><strong><font-color: "teal"><span style="background-color: lightgrey">About Me:</span> <%= @user.bio %></strong></font></h4><br>
+    <h4><strong><font-color: "teal"><span style="background-color: lightblue">Interests:</span> <br></strong></font>
+    </h4><h5>(Click an interest to see users who share it)</h5>
+
+      <h4><% @user_interests.each do |u| %>
           <% if u.user == @user %>
-              <%= link_to u.interest.name, interest_path(u.interest) %><br>
+          - <%= link_to u.interest.name, interest_path(u.interest) %><br>
           <% end %>
         <% end %>
-      </h4>
-      <p>You are a host of:
-      <strong> <%= @host.link_up.name %></strong> in
-      <strong><%= @host.link_up.location.name %></strong> on
-      <strong><%= @host.link_up.datetime.strftime("%A, %b %d, %Y at %I:%M %p") %></strong>
-      </p>
+      </h4><br>
 
-    <p>You are a guest of:
-  <strong><%= @guest.link_up.name %></strong>
-  in
-  <strong> <%= @guest.link_up.location.name %></strong> on
-    <strong> <%= @guest.link_up.datetime.strftime("%A, %b %d, %Y at %I:%M %p") %></strong>
-</p>
+      <h4><strong><font-color: "teal"><span style="background-color: lightblue">LinkUp History: </font></span></strong></h4>
 
+      <h4><strong><font-color: "teal"><span style="background-color: lightgrey">Host of:</strong></span></font>
+        <% if @host != nil %>
+          <strong> <%= link_to @host.link_up.name, @host.link_up %></strong>
+          [<i><%= @host.link_up.location.name %></i> on
+          <i><%= @host.link_up.datetime.strftime("%A, %b %d, %Y at %I:%M %p") %></i>]
+        </h4>
+          <% end %>
+    <h4><strong><font-color: "teal"><span style="background-color: lightgrey">Guest of:</strong></span></font>
+      <% if @guest != nil %>
+  <strong><%= link_to @guest.link_up.name, @guest.link_up %></strong>
+  [<i><%= @guest.link_up.location.name %></i> on
+    <i> <%= @guest.link_up.datetime.strftime("%A, %b %d, %Y at %I:%M %p") %></i>]
+</h4><br>
+      <% end %>
   <% if @user.id != session[:user_id] %>
-    <h4><%= link_to 'Invite to a Link-Up', :controller=>'guests', :action=> 'new', :id=> params[:id], class: "btn btn-secondary"%></h4>
+    <h3><%= link_to "<button>Invite to a Link-Up</button>".html_safe, :controller=>'guests', :action=> 'new', :method=> 'get', :id=> params[:id]%></h3>
   <% end %>
     </div>
   </div>
