--- a/app/views/interests/show.html.erb
+++ b/app/views/interests/show.html.erb
@@ -1,15 +1,19 @@
 <style>
 .content {
-    margin-left: auto;
-    margin-right: auto;
-    columns: 2;
-    width: 75%;
+    columns:3;
+    column-gap: 50px;
 }
 
 .heading {
       max-width: 500px;
       margin: auto;
 }
+
+.item1 {
+  rows:1;
+}
+
+
 </style>
 
 
@@ -17,7 +21,7 @@
 
   <div class="heading">
 
-  <br><h1 align="center"><span style="background-color: lightblue">-<%= @interest.name %>-</span></h1>
+  <br><h1 align="center"><span style="background-color: mediumblue"><font color="white">-<%= @interest.name %>-</font></span></h1>
 
   <h2 align="center">Users who share this interest:</h2><br></br>
   </div>
@@ -26,11 +30,12 @@
 
   <%  @user_interests.each do |u| %>
         <% if u.interest == @interest && u.user != @current_user %>
-            <div class="col-lg-3 col-md-6">
-            <h3><%= u.user.username%><br></br>
-            <img src= '<%=u.user.image_url%>', height=200><br></br>
-            <%= link_to 'View Profile', u.user, class: "btn btn-secondary" %></h3></div>
+            <div class="item">
+            <h3><span style="background-color: teal"><font color="white"><%= u.user.username%></font></span><br>
+            <br><img src= '<%=u.user.image_url%>', height=200></br>
+            <br><%= link_to 'View Profile', u.user, class: "btn btn-secondary" %></h3>  </div>
         <% end %>
+
       <% end %>
 
 
