--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -35,12 +35,16 @@
   <%= f.text_area :bio, {:class => 'form-control'} %>
   </div>
 
+
   <div class="form-group">
-<div class="form-check">
-<%= f.label :interests %><br>
-<%= f.collection_check_boxes :interest_ids, @interests, :id, :name %>
-</div>
-</div>
+     <%= f.label :interests %><br>
+  <%= f.collection_check_boxes(:interest_ids, @interests, :id, :name) do |b| %>
+   <div class="form-check">
+     <%= b.check_box class: 'form-check-input' %>
+     <%= b.label  %>
+   </div>
+   <% end %>
+
 
     <%= f.submit :class => 'btn btn-block btn-primary' %>
 
